QQmlPropertyMap: Don't spuriously emit valueChanged() signal

The valueChanged() signal was emitted when the property was written with
the same value. This increased the potential for binding loops in user
code.

Change-Id: Ifeb8f6f23e2022aa35cb6cac7cf1a3dbc0e8ca2f
Task-number: QTBUG-48136
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>